src/app/front/components/header/header.component.scss
@import '../../../../styles/variables';

header {
  position: fixed;
  top: 0;
  z-index: 100;
  width: 100%;
  height: 100px;
  background-color: $accentColor;
  z-index: 100;
  transition: background-color 300ms, color 300ms, box-shadow 300ms;
  box-shadow: 0 0 7px black;
  color: $altText;
  // border-bottom: solid 1px $dividerColor;
}

.container {
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: space-between;

  #logo {
    font-size: 32px;
  }

  nav {
    width: 80%;
    height: 100%;
    // text-shadow: 0 0 7px rgba(0, 0, 0, 0.75);
  }

  ul {
    list-style-type: none;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-around;
    height: 100%;
    align-items: center;
  }

  li {
    cursor: pointer;
    height: 100%;
    border-bottom: solid 5px transparent;
    transition: border-bottom 300ms;
  }

  li a {
    height: 100%;
    display: flex;
    align-items: center;
  }

  li.active,
  li:hover {
    border-bottom: solid 5px $darkPrimaryColor;
  }

  a,
  a:hover,
  a:active {
    text-decoration: none;
    color: $altText;
  }
}

.transparent {
  background-color: transparent;
  color: $secondaryText;
  box-shadow: none;

  nav {
    text-shadow: 0 0 7px rgba(0, 0, 0, 0.75);
  }

  a,
  a:hover,
  a:active {
    text-decoration: none;
    color: $secondaryText;
  }
}

.padding {
  padding-top: 100px;
}

